--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "advent-of-code-2020"
+name = "advent-of-code"
 version = "0.1.0"
 authors = ["Sedat Sert <bmsedat@gmail.com>"]
 edition = "2018"
@@ -13,3 +13,4 @@ aoc-runner-derive = "0.3.0"
 regex = "1.4.2"
 lazy_static = "1.4.0"
 rayon = "1.5"
+itertools = "0.8"
